crates/karva/tests/it/snapshots/it__shuffle__filter_before_shuffle.snap
---
source: crates/karva/tests/it/shuffle.rs
expression: "[(\"filtered\", RunSnapshot::shuffled(&filtered)),\n(\"selected\", RunSnapshot::shuffled(&selected)),]"
---
[
  [
    "filtered",
    {
      "success": true,
      "exit_code": 0,
      "stdout": "Random seed: [SEED]\n────────────\n     Summary [TIME] 6 tests run: 3 passed, 3 skipped",
      "stderr": "",
      "worker_orders": [
        [
          "keep_a",
          "keep_b",
          "keep_c"
        ]
      ]
    }
  ],
  [
    "selected",
    {
      "success": true,
      "exit_code": 0,
      "stdout": "Random seed: [SEED]\n────────────\n     Summary [TIME] 3 tests run: 3 passed, 0 skipped",
      "stderr": "",
      "worker_orders": [
        [
          "keep_a",
          "keep_b",
          "keep_c"
        ]
      ]
    }
  ]
]
