crates/karva/tests/it/snapshots/it__shuffle__generated_seed_replay.snap
---
source: crates/karva/tests/it/shuffle.rs
expression: "[(\"generated\", RunSnapshot::output(&first.output)),\n(\"replayed\", RunSnapshot::output(&repeated.output)),]"
---
[
  [
    "generated",
    {
      "success": true,
      "exit_code": 0,
      "stdout": "Random seed: [SEED]\n────────────\n     Summary [TIME] 6 tests run: 6 passed, 0 skipped",
      "stderr": ""
    }
  ],
  [
    "replayed",
    {
      "success": true,
      "exit_code": 0,
      "stdout": "Random seed: [SEED]\n────────────\n     Summary [TIME] 6 tests run: 6 passed, 0 skipped",
      "stderr": ""
    }
  ]
]
