crates/karva/tests/it/snapshots/it__shuffle__parallel_seed_replay.snap
---
source: crates/karva/tests/it/shuffle.rs
expression: "[(\"first\", RunSnapshot::shuffled(&first)),\n(\"replayed\", RunSnapshot::shuffled(&repeated)),]"
---
[
  [
    "first",
    {
      "success": true,
      "exit_code": 0,
      "stdout": "Random seed: [SEED]\n────────────\n     Summary [TIME] 10 tests run: 10 passed, 0 skipped",
      "stderr": "",
      "worker_orders": [
        [
          "d",
          "e",
          "h",
          "i"
        ],
        [
          "a",
          "b",
          "c",
          "f",
          "g",
          "j"
        ]
      ]
    }
  ],
  [
    "replayed",
    {
      "success": true,
      "exit_code": 0,
      "stdout": "Random seed: [SEED]\n────────────\n     Summary [TIME] 10 tests run: 10 passed, 0 skipped",
      "stderr": "",
      "worker_orders": [
        [
          "d",
          "e",
          "h",
          "i"
        ],
        [
          "a",
          "b",
          "c",
          "f",
          "g",
          "j"
        ]
      ]
    }
  ]
]
